@@ -12,6 +12,7 @@ TODO: document file descriptor usage per loop
 TODO: store loop pid_t and compare isndie signal handler,store 1 for same, 2 for differign pid, clean up in loop_fork
 TODO: embed watchers need updating when fd changes
 TODO: document portbaility requirements for atomic pointer access
+TODO: possible cb aliasing?
 
 	- mark event pipe fd as cloexec after a fork (analyzed by Sami Farin).
         - (ecb) support m68k, m88k and sh (patch by Miod Vallat).
@@ -20,6 +21,8 @@ TODO: document portbaility requirements for atomic pointer access
         - in the absence of autoconf, do not use the clock syscall
           on glibc >= 2.17 (avoids the syscall AND -lrt on systems
           doing clock_gettime in userspace).
+        - ensure extern "C" function pointers are used for externally-visible
+          loop callbacks (not watcher callbacks yet).
 
 4.15 Fri Mar  1 12:04:50 CET 2013
         - destroying a non-default loop would stop the global waitpid
